# agora-device-simulator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
sim/: __init__.py  __main__.py  control.py  fake_player.py  instance.py  launcher.py
sim/shims/: __init__.py  board.py  identity.py  installer.py  probes.py  profile.py
tests/: conftest.py  test_control_plane.py  test_display_fault.py  test_logs_synth_shim.py  test_recorder.py  test_recording_shim.py
