[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-device-simulator"
version = "0.1.0"
description = "Device simulator for the Agora digital-signage CMS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sslivins" }]
dependencies = [
    # cms_client runtime deps (duplicated from agora/requirements-cms-client.txt
    # because the submodule does not install as a package)
    "websockets>=12",
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # simulator-specific
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
agora-sim = "sim.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sim*"]
exclude = ["agora*", "tests*", "scenarios*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
